Fix the center of text on mobile

--- a/static/style.css
+++ b/static/style.css
@@ -110,6 +110,16 @@ h1{
 
 }
 
+@media(max-width: 750px){
+
+    h1{
+
+        padding: 0 40px;
+
+    }
+
+}
+
 
 /*_______________________________________________________________________________________________________________________*/
 
